# CrossEmbodimentMisc

./: .gitignore  README.md
gazebo_env/: CMakeLists.txt  README.md
gazebo_env/bringup/launch/: panda_gazebo_classic_robosuite.launch.py  panda_ur5e_gripper_gazebo_classic_real.launch.py  test_file_gazebo.launch.py  ur5_and_panda_no_gripper_gazebo_classic_real.launch.py  ur5e_gazebo_classic.launch.py  urbot_gazebo_classic.launch.py
gazebo_env/description/urdf/: d435.urdf.xacro  hand_robosuite.xacro  panda_arm_hand_camera_scene_real.urdf.xacro  panda_arm_hand_camera_scene_robosuite.urdf.xacro  panda_arm_hand_ur5e_gripper_camera_scene_real.urdf.xacro  panda_ik_robosuite.urdf  real_cam.urdf.xacro  real_ur5e_cam.urdf.xacro  test_file.urdf.xacro  ur5_and_panda_no_gripper_camera_scene_real.urdf.xacro  ur5_with_gripper.urdf.xacro  ur5_with_gripper_camera_scene_real.urdf.xacro  ur5e.urdf.xacro  ur5e_camera_gazebo_scene.urdf.xacro  ur5e_gazebo.urdf.xacro  ur5e_gazebo_pointcloud_debug.urdf.xacro  ur5e_ik_robosuite.urdf  ur5e_nvidia_with_gripper.urdf.xacro  ur5e_nvidia_with_gripper_camera_scene_robosuite.urdf.xacro  ur5e_nvidia_with_gripper_robosuite.urdf.xacro  ur5e_with_gripper.urdf.xacro  urbot.urdf
gazebo_env/meshes/ur5_obj/: ImageToStl.com_base_0.dae  ImageToStl.com_base_1.dae  ImageToStl.com_forearm_0.dae  ImageToStl.com_forearm_1.dae  ImageToStl.com_forearm_2.dae  ImageToStl.com_forearm_3.dae  ImageToStl.com_shoulder_0.dae  ImageToStl.com_shoulder_1.dae  ImageToStl.com_shoulder_2.dae  ImageToStl.com_upperarm_0.dae  ImageToStl.com_upperarm_1.dae  ImageToStl.com_upperarm_2.dae  ImageToStl.com_upperarm_3.dae  ImageToStl.com_wrist1_0.dae  ImageToStl.com_wrist1_1.dae  ImageToStl.com_wrist1_2.dae  ImageToStl.com_wrist2_0.dae  ImageToStl.com_wrist2_1.dae  ImageToStl.com_wrist2_2.dae  ImageToStl.com_wrist3.dae
gazebo_env/no_physics_plugin/: no_physics_plugin.cc
gazebo_env/panda_control_plugin/: panda_control_plugin.cc
gazebo_env/panda_control_ur5e_gripper_real_plugin/: panda_control_ur5e_gripper_real_plugin.cc
gazebo_env/real_check/: check_ur5e.py
gazebo_env/robosuite_offline_2/: compare_ground_truth.py  make_input_for_offline_ros.py
gazebo_env/robotsuite_outputs/: robosuite_find_hand_to_ee_panda.py  robosuite_find_tool0_to_ee_ur5e.py
gazebo_env/scripts/: ee_pose.py  find_rpy_for_cam.py  fk_tests.py  franka_to_franka_hdf5_conversion.py  full_ur5_and_panda_no_gripper_joint_state_publisher_node.py  full_ur5e_joint_state_publisher_node.py  gripper_client.py  panda_joint_command_publisher.py  panda_point_cloud_publisher.py  panda_ur5_gripper_real_joint_command_publisher.py  point_cloud_publisher.py  read_data_node.py  read_data_node_real_ur5_check.py  read_data_node_robosuite.py  read_data_node_robosuite_franka_to_franka_better.py  real_offline_check_node.py  ur5e_joint_command_publisher.py  ur5e_point_cloud_publisher.py  visualize_dae.py  write_data_node.py  write_data_node_robosuite.py  write_data_node_robosuite_better.py  write_data_node_robosuite_diffusion_better.py  write_data_node_ur5_to_panda_no_gripper_real_better.py
gazebo_env/ur5_only_point_cloud/: image_normalization.py
gazebo_env/ur5e_control_plugin/: ur5e_control_plugin.cc
(+61 files in other folders)
